src/objects/Alerts__c.object
<CustomObject>
    <fields>
        <fullName>Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RTName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>alerticon__c</fullName>
        <formula>IMAGE(if(RTName__c=&apos;Alert&apos;,&quot;/img/samples/color_red.gif&quot;,&quot;/img/samples/color_green.gif&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alerticon</label>
        <type>Text</type>
    </fields>
    <label>Alerts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{0}</displayFormat>
        <label>Alerts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <recordTypes>
        <fullName>Alert</fullName>
        <active>true</active>
        <label>Alert</label>
    </recordTypes>
    <recordTypes>
        <fullName>Notification</fullName>
        <active>false</active>
        <label>Notification</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>